fixed some checkstyle mistake